# CGMAlgorithm

./: Android 算法库使用文档（V1.1.0）.docx  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mymodulesapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mymodulesapp/: MainActivity.java
app/src/main/java/permission/: CheckCallback.java  CheckFragment.java  PermissionManager.java  PermissionUtils.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/example/mymodulesapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myalgorithm/: build.gradle  proguard-rules.pro
myalgorithm/src/androidTest/java/com/example/myalgorithm/: ExampleInstrumentedTest.java
myalgorithm/src/main/: AndroidManifest.xml
myalgorithm/src/main/cpp/: CMakeLists.txt  native_algorithm_class.cpp  native_algorithm_class.h  native_lib.cpp  native_lib.h
myalgorithm/src/main/cpp/algorithm/header/: cgm_algorithm.h  native_abnormal_judgment_context.h  native_abnormal_value_correction_context.h  native_arrow_direction_context.h  native_blood_glucose_index.h  native_cal_baseline_context.h  native_cgm_calibration_context.h  native_clipping_filter_context.h  native_current_judgment_context.h  native_esa_compensate_context.h  native_filter_context.h  native_kalman_context.h  native_least_square_linear_fit_context.h  native_regular_deconvolution_context.h  native_temperature_compensation_context.h
myalgorithm/src/main/cpp/algorithm/source/: cgm_algorithm.c  native_abnormal_judgment_context.c  native_abnormal_value_correction_context.c  native_arrow_direction_context.c  native_blood_glucose_index.cpp  native_cal_baseline_context.c  native_cgm_calibration_context.c  native_clipping_filter_context.c  native_current_judgment_context.c  native_esa_compensate_context.c  native_filter_context.c  native_kalman_context.c  native_least_square_linear_fit_context.c  native_regular_deconvolution_context.c  native_temperature_compensation_context.c
myalgorithm/src/main/cpp/struct2json/: algorithmContext2Json.cpp  algorithmContext2Json.h
myalgorithm/src/main/cpp/struct2json/cJSON/: cJSON_Utils.c
myalgorithm/src/main/cpp/struct2json/inc/: s2j.h  s2jdef.h
myalgorithm/src/main/java/com/algorithm/v1_1_0/: AbnormalValueCorrectionContext.java  AlgorithmClassContext.java  ArrowDirectionContext.java  CGMCalibrationContext.java  CalBaseLineContext.java  ClippingFilterContext.java  EsaCompensateContext.java  FilterContext.java  JudgmentContext.java  KalmanContext.java  NativeAlgorithmLibraryV1_1_0.java  RegularDeconvolutionContext.java
myalgorithm/src/main/jni/: com_algorithm_v1_1_0_NativeAlgorithmLibraryV1_1_0.h
(+3 files in other folders)
